# vulkan-lighting-test

./: CMakeLists.txt  README.md  build&run.bat  build.bat  compile.bat
include/: Component.h  GameObject.h  MeshFilter.h  MeshRenderer.h
include/GraphicsEngine/: GetPointMatrix.h  GridMesh.h  HelperStructures.h  VkDraw.h  VulkanEngine.h
include/Lighting/: LightingScene.h
include/PGT/: Maze.h  WystawaFractali.h
include/SIGK/: DynamicSystem.h  GeneticAlgorithm.h  PointMesh.h
include/TIO/: BenchFunction.h  prepareObjects.h
resources/shaders/: frag.spv  frag2.spv  fragColors.spv  fragMonkey.spv  fragSphere.spv  vert.spv  vertMonkey.spv
resources/shaders/src/: colors.frag  colors.vert  compile.bat  monkey.frag  monkey.vert  shader.frag  shader.vert  shader2.frag  shader2.vert  sphere.frag  sphere.vert
src/: GameObject.cpp  MeshFilter.cpp  MeshRenderer.cpp  main.cpp
src/GraphicsEngine/: GridMesh.cpp  VulkanEngine.cpp
src/Lighting/: LightingScene.cpp
src/PGT/: Maze.cpp  WystawaFractali.cpp
src/SIGK/: DynamicSystem.cpp  GeneticAlgorithm.cpp  PointMesh.cpp  geneticResults.txt
src/TIO/: BenchFunction.cpp
